[package]
name = "xur"
version = "0.1.0"
edition = "2021"
repository="https://github.com/pigeonhands/xur"
description="Toy langage made to be used in a REPL"
license="MIT"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.2"
anyhow="1"
tracing = "0.1"
tracing-subscriber = "0.2"